--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -15,9 +15,9 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MainController">
+<AnchorPane fx:id="anchorPane_base" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MainController">
    <children>
-      <HBox layoutX="47.0" layoutY="17.0" prefHeight="70.0" prefWidth="800.0" style="-fx-background-color: #000000;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <HBox layoutX="47.0" layoutY="17.0" prefHeight="70.0" prefWidth="800.0" style="-fx-background-color: #263238;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Circle fx:id="circle_userImage" fill="#78909c" radius="24.0" stroke="BLACK" strokeType="INSIDE">
                <HBox.margin>
@@ -45,6 +45,12 @@
                      <HBox.margin>
                         <Insets top="10.0" />
                      </HBox.margin>
+                     <font>
+                        <Font size="1.0" />
+                     </font>
+                     <padding>
+                        <Insets bottom="5.0" left="10.0" right="5.0" top="5.0" />
+                     </padding>
                   </JFXButton>
                   <JFXButton ripplerFill="WHITE" style="-fx-background-color: transparent;" text=" ">
                      <HBox.margin>
@@ -57,6 +63,12 @@
                            </image>
                         </ImageView>
                      </graphic>
+                     <font>
+                        <Font size="1.0" />
+                     </font>
+                     <padding>
+                        <Insets bottom="5.0" left="10.0" right="5.0" top="5.0" />
+                     </padding>
                   </JFXButton>
                   <Label minWidth="130.0" text="Discoverable" textFill="WHITE">
                      <font>
