--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -89,21 +89,21 @@
       </HBox>
       <GridPane layoutX="14.0" layoutY="210.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="70.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="394.0" minWidth="10.0" prefWidth="336.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="332.0" minWidth="10.0" prefWidth="320.0" />
           <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <JFXListView fx:id="list_Files" depth="3" style="-fx-background-color: transparent;" verticalGap="3.0" GridPane.columnIndex="1">
+            <JFXListView fx:id="list_Files" depth="3" style="-fx-background-color: transparent; -fx-selection-bar: #CFD8DC#CFD8DC;" verticalGap="3.0" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </GridPane.margin>
             </JFXListView>
             <AnchorPane prefHeight="182.0" prefWidth="400.0">
                <children>
-                  <JFXButton buttonType="RAISED" layoutX="177.0" layoutY="107.0" onAction="#Button_UploadFiles_Click" prefHeight="100.0" prefWidth="380.0" style="-fx-background-color: #CFD8DC;" text="Upload Files" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+                  <JFXButton buttonType="RAISED" layoutX="177.0" layoutY="107.0" onAction="#Button_UploadFiles_Click" prefHeight="70.0" prefWidth="245.0" style="-fx-background-color: #CFD8DC;" text="Upload Files" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                      <graphic>
                         <ImageView fitHeight="61.0" fitWidth="115.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -112,12 +112,12 @@
                         </ImageView>
                      </graphic>
                      <font>
-                        <Font name="System Bold" size="20.0" />
+                        <Font name="System Bold" size="16.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton buttonType="RAISED" layoutX="14.0" layoutY="144.0" onAction="#Button_UploadFolder_Click" prefHeight="100.0" prefWidth="380.0" style="-fx-background-color: #CFD8DC;" text="Upload Folder" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="120.0">
+                  <JFXButton buttonType="RAISED" layoutX="10.0" layoutY="89.0" onAction="#Button_UploadFolder_Click" prefHeight="70.0" prefWidth="245.0" style="-fx-background-color: #CFD8DC;" text="Upload Folder" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="89.0">
                      <font>
-                        <Font size="20.0" />
+                        <Font size="16.0" />
                      </font>
                      <graphic>
                         <ImageView fitHeight="61.0" fitWidth="115.0" pickOnBounds="true" preserveRatio="true">
