--- a/src/App/fxml/main.fxml
+++ b/src/App/fxml/main.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane_base" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MainController">
+<AnchorPane fx:id="anchorPane_base" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="App.java.MainController">
    <children>
       <HBox layoutX="47.0" layoutY="17.0" prefHeight="70.0" prefWidth="800.0" style="-fx-background-color: #263238;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -38,7 +38,7 @@
                      <graphic>
                         <ImageView fitHeight="38.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@history.png" />
+                              <Image url="@../images/history.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -59,7 +59,7 @@
                      <graphic>
                         <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@settings.png" />
+                              <Image url="@../images/settings.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -78,7 +78,7 @@
                         <Insets right="11.0" top="23.0" />
                      </HBox.margin>
                   </Label>
-                  <JFXToggleButton toggleColor="#546e7a" toggleLineColor="#78909c">
+                  <JFXToggleButton fx:id="toggleButton_discoverable" onAction="#ToggleButton_Discoverable_Click" selected="true" toggleColor="#546e7a" toggleLineColor="#78909c">
                      <HBox.margin>
                         <Insets right="10.0" top="6.0" />
                      </HBox.margin>
@@ -107,7 +107,7 @@
                      <graphic>
                         <ImageView fitHeight="61.0" fitWidth="115.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@files.png" />
+                              <Image url="@../images/files.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -122,7 +122,7 @@
                      <graphic>
                         <ImageView fitHeight="61.0" fitWidth="115.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@folder.png" />
+                              <Image url="@../images/folder.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -134,7 +134,7 @@
                      <graphic>
                         <ImageView fitHeight="29.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@paper_plane.png" />
+                              <Image url="@/App/images/paper_plane.png" />
                            </image>
                         </ImageView>
                      </graphic>
