--- a/src/App/fxml/main.fxml
+++ b/src/App/fxml/main.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXListView?>
+<?import com.jfoenix.controls.JFXSpinner?>
 <?import com.jfoenix.controls.JFXToggleButton?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
@@ -11,7 +12,9 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
@@ -101,9 +104,9 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </GridPane.margin>
             </JFXListView>
-            <AnchorPane prefHeight="182.0" prefWidth="400.0">
+            <VBox>
                <children>
-                  <JFXButton buttonType="RAISED" layoutX="177.0" layoutY="107.0" onAction="#Button_UploadFiles_Click" prefHeight="70.0" prefWidth="245.0" style="-fx-background-color: #CFD8DC;" text="Upload Files" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+                  <JFXButton buttonType="RAISED" layoutX="177.0" layoutY="107.0" onAction="#Button_UploadFiles_Click" prefHeight="73.0" prefWidth="299.0" style="-fx-background-color: #CFD8DC;" text="Upload Files" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                      <graphic>
                         <ImageView fitHeight="61.0" fitWidth="115.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -115,7 +118,7 @@
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton buttonType="RAISED" layoutX="10.0" layoutY="89.0" onAction="#Button_UploadFolder_Click" prefHeight="70.0" prefWidth="245.0" style="-fx-background-color: #CFD8DC;" text="Upload Folder" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="89.0">
+                  <JFXButton buttonType="RAISED" layoutX="10.0" layoutY="89.0" onAction="#Button_UploadFolder_Click" prefHeight="73.0" prefWidth="294.0" style="-fx-background-color: #CFD8DC;" text="Upload Folder" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="89.0">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -126,8 +129,33 @@
                            </image>
                         </ImageView>
                      </graphic>
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
                   </JFXButton>
-                  <JFXButton fx:id="button_send" buttonType="RAISED" disable="true" layoutX="225.0" layoutY="373.0" onAction="#Button_Send_Click" prefHeight="48.0" prefWidth="380.0" style="-fx-background-color: #607D8B;" text="SEND" textFill="WHITE" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
+                  <Label fx:id="label_sender_name" text="Receiving from abhay ..." visible="false">
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="label_data_size" text="10/20 MB" visible="false">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </Label>
+                  <JFXSpinner fx:id="receive_progress" prefHeight="117.0" prefWidth="320.0" progress="0.0" visible="false">
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </JFXSpinner>
+                  <Pane prefWidth="200.0" VBox.vgrow="ALWAYS" />
+                  <JFXButton fx:id="button_send" buttonType="RAISED" disable="true" layoutX="225.0" layoutY="373.0" onAction="#Button_Send_Click" prefHeight="48.0" prefWidth="285.0" style="-fx-background-color: #607D8B;" text="SEND" textFill="WHITE" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
@@ -138,9 +166,15 @@
                            </image>
                         </ImageView>
                      </graphic>
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
                   </JFXButton>
                </children>
-            </AnchorPane>
+               <padding>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </padding>
+            </VBox>
          </children>
       </GridPane>
    </children>
